syntax = "proto3";
option go_package = "pb/dm";

//import "proto/schemaInfo.proto";
package dm;

import "google/protobuf/wrappers.proto";

message Response {
}
message PageInfo{
  int64 page = 1;
  int64 size = 2;
  //排序信息
  repeated OrderBy orders = 3;
  message OrderBy {
    //排序的字段名
    string filed = 1;
    //排序方式：0 aes, 1 desc
    int64 sort = 2;
  }
}

//权限认证(提供给mqtt broker)
service DeviceAuth{
  //设备登录认证
  rpc loginAuth(LoginAuthReq)           returns (Response);
  //设备操作认证
  rpc accessAuth(AccessAuthReq)         returns (Response);
  //鉴定是否是root账号
  rpc rootCheck(RootCheckReq)           returns (Response);
  //设备动态注册
  rpc deviceRegister(DeviceRegisterReq) returns (DeviceRegisterResp);
}

//设备管理
service DeviceManage {
  //新增设备
  rpc deviceInfoCreate(DeviceInfo)     returns (Response);
  //更新设备
  rpc deviceInfoUpdate(DeviceInfo)     returns (Response);
  //删除设备
  rpc deviceInfoDelete(DeviceInfoDeleteReq)     returns (Response);
  //获取设备信息列表
  rpc deviceInfoIndex(DeviceInfoIndexReq)     returns (DeviceInfoIndexResp);
  //获取设备信息详情
  rpc deviceInfoRead(DeviceInfoReadReq)     returns (DeviceInfo);

  //绑定网关下子设备设备
  rpc deviceGatewayMultiCreate(DeviceGatewayMultiCreateReq)     returns (Response);
  //获取绑定信息的设备信息列表
  rpc deviceGatewayIndex(DeviceGatewayIndexReq)     returns (DeviceGatewayIndexResp);
  //删除网关下子设备
  rpc deviceGatewayMultiDelete(DeviceGatewayMultiDeleteReq)     returns (Response);

  //设备计数
  rpc deviceInfoCount(DeviceInfoCountReq) returns (DeviceInfoCountResp);
  //设备类型
  rpc deviceTypeCount(DeviceTypeCountReq) returns (DeviceTypeCountResp);
}

//产品管理
service ProductManage{
  /*产品管理*/
  //新增产品
  rpc productInfoCreate(ProductInfo)     returns (Response);
  //更新产品
  rpc productInfoUpdate(ProductInfo)     returns (Response);
  //删除产品
  rpc productInfoDelete(ProductInfoDeleteReq)     returns (Response);
  //获取产品信息列表
  rpc productInfoIndex(ProductInfoIndexReq)     returns (ProductInfoIndexResp);
  //获取产品信息详情
  rpc productInfoRead(ProductInfoReadReq)     returns (ProductInfo);

  /*物模型管理*/
  //更新产品物模型
  rpc productSchemaUpdate(ProductSchemaUpdateReq)returns (Response);
  //新增产品
  rpc productSchemaCreate(ProductSchemaCreateReq)     returns (Response);
  //删除产品
  rpc productSchemaDelete(ProductSchemaDeleteReq)     returns (Response);
  //获取产品信息列表
  rpc productSchemaIndex(ProductSchemaIndexReq)     returns (ProductSchemaIndexResp);
  //删除产品
  rpc productSchemaTslImport(ProductSchemaTslImportReq)     returns (Response);
  //获取产品信息列表
  rpc productSchemaTslRead(ProductSchemaTslReadReq)     returns (ProductSchemaTslReadResp);

  /*脚本管理*/
  rpc productCustomRead(ProductCustomReadReq) returns (ProductCustom);
  rpc productCustomUpdate(ProductCustom) returns (Response);
}

service DeviceGroup {
  //创建分组
  rpc groupInfoCreate(GroupInfoCreateReq)     returns (Response);
  //获取分组信息列表
  rpc groupInfoIndex(GroupInfoIndexReq)     returns (GroupInfoIndexResp);
  //获取分组信息详情
  rpc groupInfoRead(GroupInfoReadReq)     returns (GroupInfo);
  //更新分组
  rpc groupInfoUpdate(GroupInfoUpdateReq)     returns (Response);
  //删除分组
  rpc groupInfoDelete(GroupInfoDeleteReq)     returns (Response);
  //创建分组设备
  rpc groupDeviceMultiCreate(GroupDeviceMultiCreateReq)     returns (Response);
  //获取分组设备信息列表
  rpc groupDeviceIndex(GroupDeviceIndexReq)     returns (GroupDeviceIndexResp);
  //删除分组设备
  rpc groupDeviceMultiDelete(GroupDeviceMultiDeleteReq)     returns (Response);
}

service RemoteConfig {
  rpc RemoteConfigCreate(RemoteConfigCreateReq) returns (Response);
  rpc RemoteConfigIndex(RemoteConfigIndexReq) returns (RemoteConfigIndexResp);
  rpc RemoteConfigPushAll(RemoteConfigPushAllReq) returns (Response);
  rpc RemoteConfigLastRead(RemoteConfigLastReadReq) returns (RemoteConfigLastReadResp);
}

message ProductRemoteConfig{
  int64 id = 1;
  string productID = 2;
  string content = 3;
  int64 createdTime = 4;
}

message RemoteConfigCreateReq{
  string productID = 1;
  string content = 2;
}

message RemoteConfigIndexReq{
  PageInfo page = 1;
  string productID = 2;
}

message RemoteConfigIndexResp{
  repeated ProductRemoteConfig list = 1;
  int64 total = 2;
}

message RemoteConfigPushAllReq{
  string productID = 1;
}

message RemoteConfigLastReadReq{
  string productID = 1;
}

message RemoteConfigLastReadResp{
  ProductRemoteConfig info = 1;
}

message ProductCustomReadReq{
  string productID = 1;
}

message ProductCustom{
  string productID = 1;
  int64 scriptLang = 3;//脚本语言类型（默认JavaScript） 1:JavaScript 2:lua 3:python
  google.protobuf.StringValue transformScript = 2;//协议转换脚本
  repeated string customTopic = 4;//自定义topic数组
}

message DeviceGatewayBindDevice{
  string   productID = 1; //产品id
  string  deviceName = 2; //设备名称
  DeviceGatewaySign sign = 3;//签名
}

message DeviceGatewaySign{
  /*
     子设备绑定签名串。 签名算法：
     1. 签名原串，将产品 ID 设备名称，随机数，时间戳拼接：text=${product_id}${device_name};${random};${expiration_time}
     2. 使用设备 Psk 密钥，或者证书的 Sha1 摘要，进行签名：hmac_sha1(device_secret, text)
   */
  string signature = 3;
  int64  random = 4; //随机数。
  int64 timestamp = 5; //时间戳，单位：秒。
  string    signMethod = 6; //签名算法。支持 hmacsha1、hmacsha256
}

message DeviceGatewayMultiCreateReq{
  string gatewayProductID = 1;
  string gatewayDeviceName = 2;
  bool isAuthSign = 3;//是否校验设备签名
  repeated DeviceGatewayBindDevice list = 4;
}


message DeviceGatewayIndexReq{
  PageInfo page = 1;
  DeviceCore gateway = 2;//获取网关下子设备列表
  DeviceCore subDevice = 3; //获取子设备绑定的网关列表
}

message DeviceGatewayIndexResp{
  repeated DeviceInfo list = 1;
  int64 total = 2;
}

message DeviceGatewayMultiDeleteReq{
  string gatewayProductID = 1;
  string gatewayDeviceName = 2;
  repeated DeviceCore list = 3;
}

message GroupInfo{
  int64 groupID = 1;
  int64 parentID = 2;
  int64 projectID = 3;
  string groupName = 4;
  string desc = 5;
  int64 createdTime = 6;
  map<string, string> tags = 7;
  string productID = 8;
  string productName = 9;
}

message GroupInfoCreateReq{
  string groupName = 1;
  int64 parentID = 2;
  string productID = 3;
  string desc = 4;
}

message GroupInfoIndexReq{
  PageInfo page = 1;
  string groupName = 2;
  int64 parentID = 3;
  map<string, string> tags = 4;
}
message GroupInfoIndexResp{
  repeated GroupInfo list = 1;
  int64 total = 2;
  repeated GroupInfo listAll = 3;
}

message GroupInfoReadReq{
  int64 groupID = 1;
}

message GroupInfoUpdateReq{
  int64 groupID = 1;
  string groupName = 2;
  string desc = 3;
  map<string, string> tags = 4;
  string productID = 5;
}

message GroupInfoDeleteReq{
  int64 groupID = 1;
}

message GroupDeviceMultiCreateReq{
  int64 groupID = 1;
  repeated DeviceCore list = 2;
}

message GroupDeviceIndexReq{
  PageInfo page = 1;
  int64 groupID = 2;
  string productID = 3;
  string deviceName = 4;
}

message GroupDeviceIndexResp{
  repeated DeviceInfo list = 1;
  int64 total = 2;
}

message GroupDeviceMultiDeleteReq{
  int64 groupID = 1;
  repeated DeviceCore list = 2;
}

message Point{
  double  longitude = 1;//经度
  double  latitude = 2;//纬度
}
message DeviceInfo {
  string productID = 1; //产品id 只读
  google.protobuf.Int64Value projectID = 2; //项目id 只读（nil不更新，0为未分类，other则更新）
  google.protobuf.Int64Value areaID = 3; //项目区域id 只读（nil不更新，0为未分类，other则更新）
  string productName = 4; //产品名称 只读
  string deviceName = 5; //设备名称 读写
  int64 createdTime = 6; //创建时间 只读
  string secret = 7; //设备秘钥 只读
  string cert = 8;// 设备证书  只读
  string imei = 9; //IMEI号信息 只读
  string mac = 10; //MAC号信息 只读
  google.protobuf.StringValue version = 11; // 固件版本  读写
  string hardInfo = 12; //模组硬件型号 只读
  string softInfo = 13; //模组软件版本 只读
  Point Position = 14;   //设备定位,默认百度坐标系
  google.protobuf.StringValue address = 15; // 所在地址 读写
  map<string, string> tags = 16;//设备标签
  int64 isOnline = 17; //在线状态  1离线 2在线 只读
  int64 firstLogin = 18; //激活时间 只读
  int64 lastLogin = 19; //最后上线时间 只读
  int64 logLevel = 20; // 日志级别:1)关闭 2)错误 3)告警 4)信息 5)调试  读写
  google.protobuf.StringValue  deviceAlias = 21; //设备别名 读写
  int64 mobileOperator = 22;//移动运营商:1)移动 2)联通 3)电信 4)广电
  google.protobuf.StringValue phone =23;//手机号
  google.protobuf.StringValue iccid = 24;//SIM卡卡号
}

message ProductInfo{
  int64   createdTime = 1; //创建时间 只读
  string   productID = 2; //产品id 只读
  string  productName = 3; //产品名称
  int64   authMode = 4;//认证方式:1:账密认证,2:秘钥认证
  int64   deviceType = 5;//设备类型:1:设备,2:网关,3:子设备
  int64   categoryID = 6;//产品品类
  int64   netType = 7;//通讯方式:1:其他,2:wi-fi,3:2G/3G/4G,4:5G,5:BLE,6:LoRaWAN
  int64   dataProto = 8;//数据协议:1:自定义,2:数据模板
  int64   autoRegister = 9;//动态注册:1:关闭,2:打开,3:打开并自动创建设备
  string   secret = 10;//动态注册产品秘钥 只读
  google.protobuf.StringValue   desc = 11;//描述
  google.protobuf.StringValue   devStatus = 12; // 产品状态
  map<string, string> tags = 13; //产品标签
  string productImg = 14; //产品图片
  bool isUpdateProductImg = 15;//只有这个参数为true的时候才会更新产品图片,传参为产品图片的file path
}

message ProductInfoDeleteReq{
  string   productID = 1; //产品id
}

message ProductInfoReadReq{
  string   productID = 1; //产品id
}

message ProductInfoIndexReq{
  PageInfo page = 1;//分页信息 只获取一个则不填
  int64  deviceType = 2; //过滤设备类型:0:全部,1:设备,2:网关,3:子设备
  string  productName = 3; //过滤条件: 产品名称
  repeated string   productIDs = 4; //过滤产品id列表
  map<string, string> tags = 5;//key tag过滤查询,非模糊查询 为tag的名,value为tag对应的值
}

message ProductInfoIndexResp{
  repeated ProductInfo list = 1;//产品信息
  int64  total = 2;//总数(只有分页的时候会返回)
}





message DeviceInfoDeleteReq{
  string   productID = 1; //产品id
  string  deviceName = 2; //设备名称
}

message DeviceCore{
  string   productID = 1; //产品id
  string  deviceName = 2; //设备名称
}

message DeviceInfoReadReq{
  string   productID = 1; //产品id
  string  deviceName = 2; //设备名称
}

message DeviceInfoIndexReq{
  PageInfo page = 1;//分页信息 只获取一个则不填
  string  productID = 2; //过滤条件: 产品id
  string deviceName = 3;//过滤条件:模糊查询 设备名
  repeated string deviceNames = 4;//过滤条件:精准查询 设备名
  map<string, string> tags = 5;//key tag过滤查询,非模糊查询 为tag的名,value为tag对应的值
  int64 range = 6; //过滤条件:取距离坐标点固定范围内的设备
  Point Position = 7;   //设备定位,默认百度坐标系
  repeated int64 areaIDs = 8;//区域ids
  string deviceAlias = 9; //过滤条件:模糊查询 设备别名
  int64 isOnline = 10; //在线状态过滤  1离线 2在线
}

message DeviceInfoIndexResp{
  repeated DeviceInfo list = 1;//设备信息
  int64  total = 2;//总数(只有分页的时候会返回)
}




/*
上面是设备管理模块的消息
*/




/*
下面是设备管理模块的消息
*/
message LoginAuthReq {
  string username = 1;//用户名
  string password = 2;//密码
  string clientID = 3;//clientID
  string ip = 4;//访问的ip地址
  bytes certificate = 5;//客户端证书
}

message AccessAuthReq {
  string username = 1; //用户名
  string topic = 2;//主题
  string clientID = 3;//clientID
  string access = 4;//操作
  string ip = 5; //访问的ip地址
}

message RootCheckReq{
  string username = 1;//用户名
  string password = 2;//密码
  string clientID = 3;//clientID
  string ip = 4;//访问的ip地址
  bytes certificate = 5;//客户端证书
}




message ProductSchemaUpdateReq{
  ProductSchemaInfo info = 1;//物模型信息

}



message ProductSchemaCreateReq{
  ProductSchemaInfo info = 1;//物模型信息
}

message ProductSchemaDeleteReq{
  string productID = 1; //产品id  如果为空返回所有产品的信息
  string identifier = 2;           //标识符

}

message ProductSchemaIndexReq{
  PageInfo page = 1;//分页信息 只获取一个则不填
  string productID = 2; //产品id  必填
  int64  type = 3; //物模型类型 1:property属性 2:event事件 3:action行为
  int64  tag = 4; //过滤条件: 物模型标签 1:自定义 2:可选 3:必选
  repeated string   identifiers = 5; //过滤标识符列表
}

message ProductSchemaIndexResp{
  repeated ProductSchemaInfo list = 1;
  int64  total = 2;//总数(只有分页的时候会返回)
}

message ProductSchemaInfo{
  string productID = 1; //产品id  必填
  int64 type = 2;         //物模型类型 1:property属性 2:event事件 3:action行为
  int64 tag = 3;         //物模型标签 1:自定义 2:可选 3:必选  必选不可删除
  string identifier = 4;           //标识符
  google.protobuf.StringValue name = 5;       //功能名称
  google.protobuf.StringValue desc = 6;       //描述
  int64 required = 7;  //是否必须 1:是 2:否
  google.protobuf.StringValue affordance = 8;//各功能类型的详细参数定义
  //  SchemaAction action =8;
  //  SchemaProperty property =9;
  //  SchemaEvent event =10;
}

message ProductSchemaTslImportReq{
  string   productID = 1; //产品id
  string   tsl = 2;//物模型tsl
}

message ProductSchemaTslReadReq{
  string   productID = 1; //产品id
}

message ProductSchemaTslReadResp{
  string   tsl = 1;//物模型tsl
}

message DeviceInfoCountReq {
  int64  startTime = 1; // 查询区间 开始
  int64  endTime = 2;   // 查询区间 结束
}

message DeviceTypeCountReq{
  int64  startTime = 1; // 查询区间 开始
  int64  endTime = 2;   // 查询区间 结束
}

message DeviceInfoCountResp{
  int64 online = 1;
  int64 offline = 2;
  int64 inactive = 3;
  int64 unknown = 4;
}

message DeviceTypeCountResp{
  int64 device = 1;
  int64 gateway = 2;
  int64 subset = 3;
  int64 unknown = 4;
}

message DeviceRegisterReq{
  string productID = 1;  //产品id
  string deviceName = 2; //设备名称
  int64 nonce = 3;       //随机数
  int64 timestamp = 4;   //秒级时间戳
  string signature = 5;  //签名信息
}

message DeviceRegisterResp{
  int64 len = 1;       //payload加密前信息的长度
  /*
  加密过程将原始 JSON 格式的 payload 转为字符串后进行 AES 加密，再进行 base64 加密。AES 加密算法为 CBC 模式，密钥长度128，取 productSecret 前16位，偏移量为长度16的字符“0”。
  原始 payload 内容说明：
  key                value               描述
  encryptionType     1              加密类型，1表示证书认证，2表示签名认证。
  psk                1239           设备密钥，当产品认证类型为签名认证时有此参数
  clientCert         -              设备证书文件字符串格式，当产品认证类型为证书认证时有此参数。
  clientKey          -              设备私钥文件字符串格式，当产品认证类型为证书认证时有此参数。
  */
  string payload = 2;
}